
[package]
name = "plop"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
bevy = "0.16"
bevy_egui = "0.34"
egui = { version = "0.31", features = ["persistence"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.20"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
